--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -16,13 +16,16 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "debounce": "^2.0.0",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "zod": "^3.22.2",
+    "use": "^3.1.1",
+    "use-debounce": "^10.0.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
@@ -33,9 +36,9 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
+    "next": "14.0.3",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4",
-    "next": "14.0.3"
+    "prettier-plugin-tailwindcss": "0.5.4"
   },
   "engines": {
     "node": ">=18.17.0"
